--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- AngularStore app -->
     <script src="js/product.js" type="text/javascript"></script>
     <script src="js/store.js" type="text/javascript"></script>
-    <script src="js/shoppingCart.js" type="text/javascript"></script>
+    <script src="js/shopping-cart.js" type="text/javascript"></script>
     <script src="js/app.js" type="text/javascript"></script>
     <script src="js/controller.js" type="text/javascript"></script>
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
