--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       <div class="span10 offset1">
         <h1 class="well" >
             <a href="index.html">
-                <img src="img/logo.png" height="60" width="60" alt="logo"/>
+                <img src="assets/img/logo.png" height="60" width="60" alt="logo"/>
             </a>
             Angular Store 
         </h1>
